# sm64-san-andreas

./: .gitignore  CMakeLists.txt  CTaskComplexGoPickUpEntity.h  CTaskComplexSequence2.h  CTaskComplexUseSequence.h  CTaskSimpleCarGetOut.h  CTaskSimpleDuck2.h  CTaskSimpleHoldEntity2.h  README.md  audio.cpp  audio.h  config.cpp  config.h  d3d9_funcs.cpp  d3d9_funcs.h  main.cpp  main.h  mario.cpp  mario.h  mario_cj_anims.cpp  mario_cj_anims.h  mario_custom_anims.cpp  mario_custom_anims.h  mario_ped_tasks.cpp  mario_ped_tasks.h  mario_render.cpp  mario_render.h  mario_shadow.raw.h  sm64-san-andreas.cbp  sm64-san-andreas.workspace
.github/workflows/: cmake.yml
SDL2/include/SDL2/: SDL_config.h  SDL_revision.h
audioApis/: audio_sdl2.cpp  audio_sdl2.h  audio_wasapi.cpp  audio_wasapi.h
libsm64/: CMakeLists.txt  Makefile  libsm64.cbp
libsm64/src/: libsm64.c  libsm64.h  load_anim_data.c  load_anim_data.h  load_audio_data.c  load_surfaces.c  load_surfaces.h  play_sound.c
libsm64/src/decomp/: memory.c
libsm64/src/decomp/audio/: external.c  load.c  seqplayer.c  synthesis.c
libsm64/src/decomp/engine/: math_util.c  surface_collision.h
libsm64/src/decomp/game/: interaction.c  mario.c  mario_actions_airborne.c  mario_actions_cutscene.c  mario_actions_moving.c  mario_actions_object.c  mario_actions_stationary.c  mario_misc.c  mario_misc.h  object_stuff.c  object_stuff.h
libsm64/src/decomp/include/: mario_animation_ids.h  sm64.h  sm64shared.h  types.h
libsm64/src/decomp/mario/: geo.inc.c  geo.inc.h  model.inc.c  model.inc.h
libsm64/src/decomp/tools/: convUtils.c
raw/: anim_car_locked.raw.h  anim_climb_cj.raw.h  anim_close_car_door_left.raw.h  anim_close_car_door_right.raw.h  anim_crib_use_switch.raw.h  anim_cutscene.raw.h  anim_dance_bad.raw.h  anim_dance_good.raw.h  anim_dance_loop.raw.h  anim_eat.raw.h  anim_facepalm.raw.h  anim_gunheavy_aim.raw.h  anim_gunheavy_aim_walk.raw.h  anim_gunheavy_idle.raw.h  anim_gunheavy_idle_alt.raw.h  anim_gunheavy_run.raw.h  anim_gunheavy_skid_start.raw.h  anim_gunheavy_skid_stop.raw.h  anim_gunheavy_skid_turn.raw.h  anim_gunheavy_tiptoe.raw.h  anim_gunheavy_walk.raw.h  anim_gunheavy_walk_start.raw.h  anim_gunlight_aim.raw.h  anim_gunlight_aim_walk.raw.h  anim_gunpoint.raw.h  anim_gunpoint_run.raw.h  anim_gunpoint_skid.raw.h  anim_gunpoint_skid_stop.raw.h  anim_gunpoint_skid_turn.raw.h  anim_gunpoint_tiptoe.raw.h  anim_gunpoint_walk.raw.h  anim_gunpoint_walk_start.raw.h  anim_gunside_idle.raw.h  anim_gunside_idle_alt.raw.h  anim_gunside_run.raw.h  anim_gunside_skid_start.raw.h  anim_gunside_skid_stop.raw.h  anim_gunside_skid_turn.raw.h  anim_gunside_tiptoe.raw.h  anim_gunside_walk.raw.h  (+33 more)
